--- a/plugin.xml
+++ b/plugin.xml
@@ -1,118 +1,131 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" 
-  xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-google-analytics" version="1.8.6">
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
+        xmlns:android="http://schemas.android.com/apk/res/android" id="cordova-plugin-google-analytics" version="1.8.6">
   <engines>
-    <engine name="cordova" version=">=3.0.0" />
+    <engine name="cordova" version=">=3.0.0"/>
   </engines>
   <name>Google Universal Analytics Plugin</name>
-  <description>Simple tracking (screens/events) for Google Analytics SDK 3.14 (iOS), SDK 4.0 (Android), Browsers and WP8</description>
+  <description>Simple tracking (screens/events) for Google Analytics SDK 3.14 (iOS), SDK 4.0 (Android), Browsers and
+    WP8
+  </description>
   <author>Daniel C. Wilson</author>
   <license>MIT License</license>
   <js-module src="www/analytics.js" name="UniversalAnalytics">
     <!-- 'analytics' is deprecated, but supported to ease the transition -->
-    <clobbers target="analytics" />
-    <clobbers target="ga" />
+    <clobbers target="analytics"/>
+    <clobbers target="ga"/>
   </js-module>
 
   <platform name="browser">
     <js-module src="browser/UniversalAnalyticsProxy.js" name="UniversalAnalyticsProxy">
-      <runs />
+      <runs/>
     </js-module>
   </platform>
 
   <platform name="ios">
     <config-file target="config.xml" parent="/*">
       <feature name="UniversalAnalytics">
-        <param name="ios-package" value="UniversalAnalyticsPlugin" />
+        <param name="ios-package" value="UniversalAnalyticsPlugin"/>
       </feature>
     </config-file>
 
-    <header-file src="ios/UniversalAnalyticsPlugin.h" />
-    <source-file src="ios/UniversalAnalyticsPlugin.m" />
-    <source-file src="ios/libGoogleAnalyticsServices.a" framework="true" />
-    <source-file src="ios/libAdIdAccess.a" framework="true" />
-    <header-file src="ios/GAIDictionaryBuilder.h" />
-    <header-file src="ios/GAIFields.h" />
-    <header-file src="ios/GAILogger.h" />
-    <header-file src="ios/GAITrackedViewController.h" />
-    <header-file src="ios/GAI.h" />
-    <header-file src="ios/GAITracker.h" />
-    <header-file src="ios/GAIEcommerceFields.h" />
-    <header-file src="ios/GAIEcommerceProduct.h" />
-    <header-file src="ios/GAIEcommerceProductAction.h" />
-    <header-file src="ios/GAIEcommercePromotion.h" />
+    <header-file src="ios/UniversalAnalyticsPlugin.h"/>
+    <source-file src="ios/UniversalAnalyticsPlugin.m"/>
+    <source-file src="ios/libGoogleAnalyticsServices.a" framework="true"/>
+    <source-file src="ios/libAdIdAccess.a" framework="true"/>
+    <header-file src="ios/GAIDictionaryBuilder.h"/>
+    <header-file src="ios/GAIFields.h"/>
+    <header-file src="ios/GAILogger.h"/>
+    <header-file src="ios/GAITrackedViewController.h"/>
+    <header-file src="ios/GAI.h"/>
+    <header-file src="ios/GAITracker.h"/>
+    <header-file src="ios/GAIEcommerceFields.h"/>
+    <header-file src="ios/GAIEcommerceProduct.h"/>
+    <header-file src="ios/GAIEcommerceProductAction.h"/>
+    <header-file src="ios/GAIEcommercePromotion.h"/>
 
-    <framework src="SystemConfiguration.framework" />
-    <framework src="CoreData.framework" />
-    <framework src="AdSupport.framework" />
-    <framework src="libz.dylib" />
-    <framework src="libsqlite3.dylib" />
+    <framework src="SystemConfiguration.framework"/>
+    <framework src="CoreData.framework"/>
+    <framework src="AdSupport.framework"/>
+    <framework src="libz.dylib"/>
+    <framework src="libsqlite3.dylib"/>
 
     <framework src="GoogleToolboxForMac" type="podspec" spec="~> 2.1.4"/>
   </platform>
 
   <platform name="android">
-    <framework src="com.google.android.gms:play-services-analytics:$GMS_VERSION" />
-    <preference name="GMS_VERSION" default="11.0.1"/>
+    <!--    <framework src="com.google.android.gms:play-services-analytics:$GMS_VERSION" />-->
+    <!--    <preference name="GMS_VERSION" default="11.0.1"/>-->
+
+    <framework
+      custom="true"
+      src="android/build-extras.gradle"
+      type="gradleReference"/>
 
     <config-file target="res/xml/config.xml" parent="/*">
       <feature name="UniversalAnalytics">
-        <param name="android-package" value="com.danielcwilson.plugins.analytics.UniversalAnalyticsPlugin" />
+        <param name="android-package" value="com.danielcwilson.plugins.analytics.UniversalAnalyticsPlugin"/>
       </feature>
     </config-file>
     <config-file target="AndroidManifest.xml" parent="/*">
-      <uses-permission android:name="android.permission.INTERNET" />
-      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+      <uses-permission android:name="android.permission.INTERNET"/>
+      <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     </config-file>
     <!-- Add support for devices without Google Play Services installed. -->
     <config-file target="AndroidManifest.xml" parent="/manifest/application">
       <receiver android:name="com.google.android.gms.analytics.AnalyticsReceiver" android:enabled="true">
         <intent-filter>
-          <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH" />
+          <action android:name="com.google.android.gms.analytics.ANALYTICS_DISPATCH"/>
         </intent-filter>
       </receiver>
-      <service android:name="com.google.android.gms.analytics.AnalyticsService" android:enabled="true" android:exported="false"/>
-      <receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver" android:enabled="true" android:exported="true">
+      <service android:name="com.google.android.gms.analytics.AnalyticsService" android:enabled="true"
+               android:exported="false"/>
+      <receiver android:name="com.google.android.gms.analytics.CampaignTrackingReceiver" android:enabled="true"
+                android:exported="true">
         <intent-filter>
-          <action android:name="com.android.vending.INSTALL_REFERRER" />
+          <action android:name="com.android.vending.INSTALL_REFERRER"/>
         </intent-filter>
       </receiver>
-      <service android:name="com.google.android.gms.analytics.CampaignTrackingService" android:enabled="true" android:exported="false"/>
+      <service android:name="com.google.android.gms.analytics.CampaignTrackingService" android:enabled="true"
+               android:exported="false"/>
     </config-file>
-    <source-file src="android/UniversalAnalyticsPlugin.java" target-dir="src/com/danielcwilson/plugins/analytics" />
+    <source-file src="android/UniversalAnalyticsPlugin.java" target-dir="src/com/danielcwilson/plugins/analytics"/>
   </platform>
 
   <platform name="wp8">
     <config-file target="config.xml" parent="/*">
       <feature name="UniversalAnalytics">
-        <param name="wp-package" value="UniversalAnalyticsPlugin" />
+        <param name="wp-package" value="UniversalAnalyticsPlugin"/>
       </feature>
     </config-file>
 
     <config-file target="Properties/WMAppManifest.xml" parent="/Deployment/App/Capabilities">
-      <Capability Name="ID_CAP_NETWORKING" />
+      <Capability Name="ID_CAP_NETWORKING"/>
     </config-file>
 
-    <source-file src="wp8/UniversalAnalytics.cs" />
-    <source-file src="wp8/PhoneHelpers.cs" />
-    <source-file src="wp8/PhoneNameResolver.cs" />
-    <source-file src="wp8/PlatformInfoProvider.WP.cs" />
+    <source-file src="wp8/UniversalAnalytics.cs"/>
+    <source-file src="wp8/PhoneHelpers.cs"/>
+    <source-file src="wp8/PhoneNameResolver.cs"/>
+    <source-file src="wp8/PlatformInfoProvider.WP.cs"/>
   </platform>
 
   <!-- windows -->
   <platform name="windows">
     <js-module src="windows/GoogleAnalyticsProxy.js" name="UniversalAnalyticsPlugin">
-      <runs />
+      <runs/>
     </js-module>
 
-    <config-file target="package.windows10.appxmanifest" parent="/Package/Capabilities" versions=">=10.0" device-target="win">
-      <Capability Name="internetClient" />
+    <config-file target="package.windows10.appxmanifest" parent="/Package/Capabilities" versions=">=10.0"
+                 device-target="win">
+      <Capability Name="internetClient"/>
     </config-file>
-    <config-file target="package.windows.appxmanifest" parent="/Package/Capabilities" versions=">=8.1.0" device-target="win">
-      <Capability Name="internetClient" />
+    <config-file target="package.windows.appxmanifest" parent="/Package/Capabilities" versions=">=8.1.0"
+                 device-target="win">
+      <Capability Name="internetClient"/>
     </config-file>
-    <config-file target="package.phone.appxmanifest" parent="/Package/Capabilities" versions=">=8.1.0" device-target="phone">
-      <Capability Name="internetClientServer" />
+    <config-file target="package.phone.appxmanifest" parent="/Package/Capabilities" versions=">=8.1.0"
+                 device-target="phone">
+      <Capability Name="internetClientServer"/>
     </config-file>
 
     <info>
